--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
 body {
+  min-height: 100%;
+  width: 100%;
+  color: #e6e5e8;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
@@ -15,7 +18,7 @@ body {
     "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   line-height: 1.5;
-  color: #24292e;
+  color: #a8266d;
   background-color: #fff;
 }
 
@@ -36,4 +39,24 @@ input.error {
   color: red;
   height: 5px;
   margin-top: -12px;
+}
+
+html {
+  height: 100%;
+}
+
+.background_main_color {
+  background-color: #8a85ff;
+}
+
+.background_secondary_color {
+  background-color: #282C34;
+}
+
+.text_main_color {
+  color: #e6e5e8;
+}
+
+.text_secondary_color {
+  color: #8a85ff;
 }
