--- a/client/src/components/views/Dashboard/components/ActiveUsersList/ActiveUsersList.css
+++ b/client/src/components/views/Dashboard/components/ActiveUsersList/ActiveUsersList.css
@@ -4,10 +4,11 @@
 }
 
 .active_user_list_item {
+  margin-top: 100px;
   width: 100%;
   height: 80px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   transition: 0.3s;
 }
 
